[package]
name = "retusaari-runner"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["process", "io-util", "macros", "time"] }
command-group = { version = "2.1.0", features = ["tokio", "with-tokio"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev"}
ts-rs = "6.2.1"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
